Bug 1563239 - Do not summarize builtin events to the "dynamic" process r=janerik

Check if the dynamic event is built-in or not before summarizing.

Differential Revision: https://phabricator.services.mozilla.com/D41924

--HG--
extra : moz-landing-system : lando